@@ -1,2 +1,2 @@
 #include "Common.hh"
-#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 4591", "2013-11-24 15:33:46 UTC", "Linux 2.6.32-52-generic i686", ""
+#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 4610", "2013-11-26 13:32:00 UTC", "Linux 2.6.32-52-generic i686", "'--host=i486-pc-linux-gnu' '--build=i486-pc-linux-gnu' '--target=i386-rpm-linux' '--program-prefix=' '--prefix=/usr' '--exec-prefix=/usr' '--bindir=/usr/bin' '--sbindir=/usr/sbin' '--sysconfdir=/etc' '--datadir=/usr/share' '--includedir=/usr/include' '--libdir=/usr/lib' '--libexecdir=/usr/libexec' '--localstatedir=/var' '--sharedstatedir=/usr/com' '--mandir=/usr/share/man' '--infodir=/usr/share/info' 'build_alias=i486-pc-linux-gnu' 'host_alias=i486-pc-linux-gnu' 'target_alias=i386-rpm-linux' 'CXXFLAGS=-O2 -g -march=i386 -mtune=i686' 'CFLAGS=-O2 -g -march=i386 -mtune=i686'"
